# mediaite-ghostink

./: .conflict-files  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  John-Eakin-Statement-of-Qualifications.docx  LICENSE  Makefile  README.md  SECURITY.md  _quarto.yml  config.external_controls.example.toml  config.toml  config.toml.example  coverage-tui.toml  index.qmd  mediaite-ghostink-integrity-report.docx  mediaite-ghostink-research-report.docx  pyproject.toml  quarto.yml  release-notes-v0.1.0.md  release-please-config.json
.auto-resolution/: .env.example  .gitattributes  config.toml
.auto-resolution/docs/: GUARDRAILS.md  NOTES.md  NOTION_REGISTRATION.md
.auto-resolution/prompts/: README.md
.auto-resolution/tests/: __init__.py  test_dedup_banding.py  test_hashing_hypothesis.py
.claude/: hooks.json
.claude/hooks/: function-length-guard.sh  merge_artifact_blocker.py
.conflict-base-0/: .pre-commit-config.yaml  AGENTS.md  AGENTS.staging.md  CLAUDE.md  Makefile  TASK.md
.conflict-base-0/.claude/: hooks.json
.conflict-base-0/docs/: RUNBOOK.md
.conflict-base-0/tests/: conftest.py  test_scraper.py
.conflict-side-0/: .ruff.toml
.conflict-side-0/.cursor/: settings.json
.conflict-side-0/docs/: ARCHITECTURE.md  DEPLOYMENTS.md
.conflict-side-0/scripts/: lint_agents_md.py
.conflict-side-1/: .gitignore  HANDOFF.md  README.md  pyproject.toml
.conflict-side-1/.claude/: settings.json
.conflict-side-1/docs/: TESTING.md
.conflict-side-1/tests/: test_storage.py
.cursor/plans/: cli_agent-readiness_3878934e.plan.md  config_full_run_ab0c7a48.plan.md  coverage_gaps_and_tests_4d579ee2.plan.md  deslop_codebase_full.plan.md  embedding_i_o_benchmark_gap_c1cfe05b.plan.md  forensic_reliability_plan_5b54e596.plan.md  notebook_alignment_fixes_9598b354.plan.md  notion_review_implementation_481fa9ef.plan.md  parallel_evidence_refresh_a5384993.plan.md  phase_12-13_gap_closure_76cf8cf6.plan.md  phase_12_gap_closure_778674de.plan.md  phase_16_adversarial_remediation_f5dffe1f.plan.md  phase_17_diagnostics_c4e40eae.plan.md  pipeline_hash_and_diagnostics_3d07e1d0.plan.md  pr94-all-fixes-plan_ca22ee18.plan.md  punch_list_full_implementation_11cec6e6.plan.md  refactoring_run_11_full_49168955.plan.md  report_changes_implementation_7606298f.plan.md  report_visual_polish_78d31eaf.plan.md  root_and_readme_production_readiness_93f4b710.plan.md  run_11_gap_fill_8db42b23.plan.md  run_12_notion_full_implementation_d63a87d8.plan.md  run_2_reports_mcp_plan_b982e248.plan.md  scraper_concurrency_improvements_0648ef82.plan.md  tui_pipeline_dashboard_088da23a.plan.md  typer_cli_cleanup_f5ab9095.plan.md
.github/workflows/: ci-quality.yml  ci-report.yml  ci-tests.yml  deploy.yml  notify-docs-hub.yml  release-please.yml
data/: authors_manifest.jsonl  scrape_errors.jsonl
data/analysis/: ahmad-austin_bursts.json  ahmad-austin_changepoints.json  ahmad-austin_convergence.json  ahmad-austin_convergence_components.json  ahmad-austin_drift.json  ahmad-austin_hypothesis_tests.json  ahmad-austin_imputation_stats.json  ahmad-austin_result.json  ahmad-austin_timeseries.parquet  alex-griffing_bursts.json  alex-griffing_centroids.npz  alex-griffing_changepoints.json  alex-griffing_convergence.json  alex-griffing_convergence_components.json  alex-griffing_drift.json  alex-griffing_hypothesis_tests.json  alex-griffing_imputation_stats.json  alex-griffing_result.json  alex-griffing_timeseries.parquet  alex-griffing_umap.json  brandoncontes_bursts.json  brandoncontes_changepoints.json  brandoncontes_convergence.json  brandoncontes_hypothesis_tests.json  brandoncontes_result.json  brandoncontes_timeseries.parquet  caleb-howe_bursts.json  caleb-howe_hypothesis_tests.json  caleb-howe_result.json  caleb-howe_timeseries.parquet  candice-ortiz_bursts.json  candice-ortiz_hypothesis_tests.json  candice-ortiz_result.json  candice-ortiz_timeseries.parquet  charlie-nash_baseline_curve.json  charlie-nash_bursts.json  charlie-nash_changepoints.json  charlie-nash_convergence.json  charlie-nash_convergence_components.json  charlie-nash_hypothesis_tests.json  (+163 more)
data/bench/: phase15_post_df7f682.json  phase15_tc_solo.json
data/embeddings/: manifest.jsonl
data/embeddings_archive_20260425T063654Z/: manifest.jsonl  manifest.jsonl.bak
data/features/: ahmad-austin.parquet  alex-griffing.parquet  brandoncontes.parquet  caleb-howe.parquet  colby-hall.parquet  (+22 more)
docs/: ARCHITECTURE.md  DATA.md  EXIT_CODES.md  GUARDRAILS.md  RUNBOOK.md  TASK.md  TESTING.md  docs.json  pre_registration.md  punch-list-closure-index.md  settings_phase15.md
evals/: baseline_quality.py
notebooks/: 00_power_analysis.ipynb  01_scraping.ipynb  02_corpus_audit.ipynb  03_exploration.ipynb  04_feature_analysis.ipynb  05_change_point_detection.ipynb  06_embedding_drift.ipynb  07_statistical_evidence.ipynb  08_control_comparison.ipynb  09_full_report.ipynb  10_survey_dashboard.ipynb  11_calibration.ipynb
scripts/: bench_phase15.py  check_no_new_type_ignore.py  cohort_12_run.sh  generate_baseline.py  generate_phase8_notebooks.py  merge_embedding_manifest_shards.py  migrate_feature_parquets.py  rebuild_embedding_manifest.py  report_analysis_module_coverage.py  seed_phase0_ai_baseline_stubs.py  synthetic_null_pelt_calibration.py  verify_repo_preregistration_lock.py
tests/: conftest.py  test_analysis.py  test_analysis_drift_pipeline.py  test_analysis_infrastructure.py  test_baseline.py  test_calibration.py  test_crawler_metadata_phase_b.py  test_dedup_streaming_export.py  test_embedding_batch_hypothesis.py  test_embedding_batch_performance.py  test_features.py  test_fetcher_phase_a.py  test_hashing_hypothesis.py  test_lexical_hypothesis.py  test_narrative.py  test_orchestrator_assemble.py  test_parquet_embeddings_duckdb.py  test_permutation.py  test_pipeline.py  test_pipeline_context.py  test_pipeline_progress.py  test_preflight.py  test_preregistration.py  test_probability.py  test_provenance_hash.py  test_report.py  test_scraper.py  test_storage.py  test_survey.py  test_tui.py
(+618 files in other folders)
