[project]
name = "mediaite-ghostink"
version = "0.1.0"
description = "Forensic pipeline for scrape -> extract -> analyze -> report workflows."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
  "typer>=0.15.0",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.13.4",
  "lxml>=5.4.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.9.0",
  "polars>=1.29.0",
  "duckdb>=1.2.2",
  "jinja2>=3.1.6",
  "markdown>=3.8",
  "spacy>=3.7.0",
  "scikit-learn>=1.5.0",
  "sentence-transformers>=3.0.0",
  "ruptures>=1.1.9",
  "scipy>=1.14.0",
  "numpy>=1.26.0",
  "plotly>=5.22.0",
  "umap-learn>=0.5.6",
  "textstat>=0.7.4",
  "ipython>=8.31.0",
  "ipykernel>=6.29.0",
  "pyarrow>=17.0",
  "xxhash>=3.4",
  "python-json-logger>=3.2.1",
  "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
  "kaleido>=1.2.0",
  "nbformat>=5.10.4",
  "nbclient>=0.10.4",
  "connectorx>=0.4.5",
]

[project.urls]
Repository = "https://github.com/Abstract-Data/mediaite-ghostink"

[project.optional-dependencies]
probability = [
  "torch>=2.0",
  "transformers>=4.40",
  "accelerate>=0.30",
]
baseline = [
  "pydantic-ai>=1.0",
  "pydantic-evals>=1.0",
]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
  "hypothesis>=6.131.15",
  "ruff>=0.11.6",
  "pre-commit>=4.2.0",
]
tui = [
    "textual>=1.0.0",
    "rich>=13.0",
]

[project.scripts]
forensics = "forensics.cli:main"
forensics-setup = "forensics.tui:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/forensics"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers --cov=forensics --cov-report=term-missing -m 'not slow'"
markers = [
  "slow: test requires loading large models / downloading external artifacts",
  "integration: cross-stage or external-tool integration (opt-in via -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# Quarto/IPython notebooks are not `src`/`tests` Python; linting them as flat
# modules trips I001/E402/E501 across cells. CI quality gate targets package code.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C901"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["forensics"]
branch = true
omit = [
  # Phase 10 baseline orchestration requires a live Ollama server + the baseline
  # optional-extra. Covered via manual smoke runs, not CI.
  "*/forensics/baseline/orchestrator.py",
  "*/forensics/baseline/agent.py",
  # Textual TUI is an optional extra; default ``uv sync`` skips it, which would
  # otherwise drag aggregate coverage below ``fail_under`` despite identical
  # pipeline test surface (see ``[project.optional-dependencies]`` tui group).
  "*/forensics/tui/*",
]

[tool.coverage.report]
# Denominator includes features + storage; optional-heavy paths (probability, live
# fetches) keep aggregate modest. Phase 15 (Notion remediation) raised fail_under to 72%
# with pipeline stage-order tests, drift pipeline + provenance hash tests, and
# orchestrator assemble coverage. Phase 15 H3 lifted to 75% after the H1
# reference-fixture wave + H2 parallel-parity test added new test surface
# (observed total coverage ~76.3%).
fail_under = 75
show_missing = true
skip_covered = false
